# ROS2-Projects

./: README.md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/my_cpp_package/lib/my_cpp_package/: LED_panel  add_two_ints_client  add_two_ints_client_oops  add_two_ints_server  basic_pub  basic_sub  battery  cpp_node  hardware_status_publisher  number_counter  number_publisher  robot_news_station  smartphone
ros2_ws/install/my_cpp_package/share/my_cpp_package/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
ros2_ws/install/my_python_package/lib/my_python_package/: LED_panel  add_two_ints_client  add_two_ints_client_oops  add_two_ints_server  basic_pub  basic_sub  battery_status  hardware_status_publisher  number_counter  number_publisher  py_node  py_node_oop  robot_news_station  smartphone
ros2_ws/install/my_python_package/share/my_python_package/: package.dsv  (+2 more)
ros2_ws/log/: latest_build
ros2_ws/my_build_dir/my_robot_bringup/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  colcon_command_prefix_build.sh  colcon_command_prefix_build.sh.env  install_manifest.txt
ros2_ws/my_build_dir/my_robot_bringup/ament_cmake_core/: package.cmake
ros2_ws/my_build_dir/my_robot_bringup/ament_cmake_environment_hooks/: local_setup.sh
ros2_ws/my_build_dir/my_robot_bringup/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
ros2_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/log/: latest_build
ros2_ws/src/my_cpp_package/: CMakeLists.txt
ros2_ws/src/my_cpp_package/src/: HardwareStatus.cpp  LED_panel.cpp  add_two_ints_client.cpp  add_two_ints_client_oops.cpp  add_two_ints_server.cpp  basic_pub.cpp  basic_sub.cpp  battery.cpp  number_publisher.cpp  robot_news_station.cpp  smartphone.cpp
ros2_ws/src/my_python_package/: setup.py
ros2_ws/src/my_python_package/my_python_package/: battery_status.py  number_publisher.py  robot_news_station.py
ros2_ws/src/my_robot_bringup/: CMakeLists.txt
ros2_ws/src/my_robot_bringup/launch/: my_robot_gazebo.launch.xml  number_app.launch.py  radio.launch.py  turtle_catch_them_all.launch.py
ros2_ws/src/my_robot_bringup/rviz/: urdf_config.rviz
ros2_ws/src/my_robot_description/launch/: display.launch.py  display.launch.xml
ros2_ws/src/my_robot_description/urdf/: common_properties.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  my_robot.urdf.xacro
ros2_ws/src/my_robot_interfaces/: CMakeLists.txt
ros2_ws/src/turtle_catch_them_all/turtle_catch_them_all/: turtle_controller.py
(+98 files in other folders)
